updated reset button

--- a/AngularJS Quiz Assignment/HTML/body.html
+++ b/AngularJS Quiz Assignment/HTML/body.html
@@ -56,7 +56,7 @@
                         style="float: right"
                         ng-show="$index === questions.length - 1"
                         ng-click="resetQuiz()"
-                        value="Reset (Semi-working)"
+                        value="Reset"
                 >
                 <!-- Full Reset -->
                 <input
